# wildq

./: .coveragerc  .editorconfig  .gitignore  .pylintrc  .travis.yml  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  unit-tests.yml
docs/: apireference.rst  changelog.rst  conf.py  getting-started.rst  index.rst
docs/guide/: index.rst  installing.rst
examples/: hcl.hcl  ini.ini  json.json  toml.toml  xml.xml  yaml.yaml
tests/: test_hcl.py  test_ini.py  test_json.py  test_toml.py  test_wild.py  test_xml.py  test_yaml.py  tests.sh
wildq/: __main__.py  _wildq_version.py  cli.py  wildq.py
wildq/filetypes/: __init__.py  hcl_type.py  ini_type.py  json_type.py  toml_type.py  xml_type.py  yaml_type.py
